--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: MSc365.eu
 description: aka Martin Swinkels, consultancy 365
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/msc365/msc365.github.io/blob/main/images/msc365-profile.png
+avatar: https://msc365.eu/images/msc365-256.png
 
 #
 # Flags below are optional
