--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://msc365.eu/images/msc365-256.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: martin.swinkels@msc365.eu
   facebook:
   flickr:
   github: mccmswinkels
@@ -27,7 +27,6 @@ footer-links:
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: mccmswinkels
-  credly: mccmswinkels
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
