--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://msc365.eu/images/msc365-256.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: martin.swinkels@msc365.eu
+  email:
   facebook:
   flickr:
   github: mccmswinkels
