--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: MSc365.eu
 
 # Short bio or description (displayed in the header)
-description: aka Martin Swinkels, consult 365
+description: aka Martin Swinkels, IT consult 365
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://msc365.eu/images/msc365-256.png
