--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
-title: Your awesome title
+title: MSc365.eu
 author:
-  name: GitHub User
-  email: your-email@domain.com
+  name: Martin Swinkels, consultancy 365
+  email: martin.swinkels@msc365.eu
 description: > # this means to ignore newlines until "show_excerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Cloud development, app development, and DevOps consultancy on Azure, Microsoft 365, and Microsoft Power Platform.
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
@@ -16,26 +14,26 @@ minima:
 
   # generate social links in footer
   social_links:
-    - { platform: devto,          user_url: "https://dev.to/jekyll" }
-    - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
-    - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
-    - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
-    - { platform: github,         user_url: "https://github.com/jekyll/minima" }
-    - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
-    - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
-    - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
-    - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jekyll" }
-    - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
-    - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
-    - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
-    - { platform: telegram,       user_url: "https://t.me/jekyll" }
-    - { platform: twitter,        user_url: "https://twitter.com/jekyllrb" }
-    - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
+    # - { platform: devto,          user_url: "https://dev.to/jekyll" }
+    # - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
+    # - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
+    # - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
+    - { platform: github,         user_url: "https://github.com/mccmswinkels" }
+    # - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
+    # - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
+    # - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
+    - { platform: linkedin,       user_url: "https://www.linkedin.com/mccmswinkels" }
+    # - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
+    # - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
+    # - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
+    # - { platform: telegram,       user_url: "https://t.me/jekyll" }
+    - { platform: twitter,        user_url: "https://twitter.com/mccmswinkels" }
+    # - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.md
+header_pages:
+- about.md
 
 # Build settings
 theme: minima
