--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: MSc365.eu
 author:
   name: Martin Swinkels, consultancy 365
-  email: martin.swinkels@msc365.eu
+  email: info@msc365.eu
 description: > # this means to ignore newlines until "show_excerpts:"
   Cloud development, app development, and DevOps consultancy on Azure, Microsoft 365, and Microsoft Power Platform.
 
@@ -11,7 +11,8 @@ show_excerpts: false # set to true to show excerpts on the homepage
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
   date_format: "%b %-d, %Y"
-
+  skin: dark
+  
   # generate social links in footer
   social_links:
     # - { platform: devto,          user_url: "https://dev.to/jekyll" }
