Update _config.md to auto skin

--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ show_excerpts: false # set to true to show excerpts on the homepage
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
   date_format: "%b %-d, %Y"
-  skin: dark
-  
+  skin: auto
+
   # generate social links in footer
   social_links:
     # - { platform: devto,          user_url: "https://dev.to/jekyll" }
