--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author:
 description: > # this means to ignore newlines until "show_excerpts:"
   Remote and hybrid cloud development, app development, and DevOps consultancy on Azure, Microsoft 365, and Microsoft Power Platform.
 
-show_excerpts: false # set to true to show excerpts on the homepage
+show_excerpts: true # set to false to hide excerpts on the homepage
 
 # Minima date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
