--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: MSc365.eu
+title: Martin Swinkels Consultancy 365 aka MSc365
 author:
-  name: Martin Swinkels Consultancy 365, aka MSc365.eu
+  name: Martin Swinkels
   email: support@msc365.eu
 description: > # this means to ignore newlines until "show_excerpts:"
   Remote and hybrid cloud development, app development, and DevOps consultancy on Azure, Microsoft 365, and Microsoft Power Platform.
