--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Martin Swinkels Consultancy 365 aka MSc365
+title: Martin Swinkels Consultancy 365
 author:
   name: Martin Swinkels
   email: support@msc365.eu
