--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Martin Swinkels Consultancy 365
+title: MSc365
 author:
   name: Martin Swinkels
   email: support@msc365.eu
 description: > # this means to ignore newlines until "show_excerpts:"
-  Remote and hybrid cloud development, app development, and DevOps consultancy on Azure, Microsoft 365, and Microsoft Power Platform.
+  Martin Swinkels Consultancy 365: Remote and hybrid cloud development, app development, and DevOps consultancy on Azure, Microsoft 365, and Microsoft Power Platform.
 
 show_excerpts: true # set to false to hide excerpts on the homepage
 
