--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ minima:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 header_pages:
+- tags/portfolio.md
 - about.md
 
 # Build settings
