--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: MSc365
 author:
   name: Martin Swinkels
-  email: support@msc365.eu
+  email: blog@msc365.eu
 description: > # this means to ignore newlines until "show_excerpts:"
   Remote (hybrid) cloud development, app development, and DevOps consultancy on Azure, Microsoft 365, and Microsoft Power Platform.
 
