--- a/_config.yml
+++ b/_config.yml
@@ -41,8 +41,8 @@ minima:
 # this and add the path to the pages in order as they should show up
 header_pages:
 - tags/portfolio.md
+- policy.md
 - about.md
-- comment-policy.md
 
 # Build settings
 theme: minima
