--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author:
   name: Martin Swinkels
   email: blog@msc365.eu
 description: > # this means to ignore newlines until "show_excerpts:"
-  Remote (hybrid) cloud development, app development, and DevOps consultancy on Azure, Microsoft 365, and Microsoft Power Platform.
+  Remote (hybrid) Cloud Development, App Development, and DevOps Consultancy on Azure Platform, Microsoft 365, and Microsoft Power Platform.
 
 url: https://msc365.eu/
 
