--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: MSc365
 author:
   name: Martin Swinkels - Consultancy 365
-  email: blog@msc365.eu
+  email: martin.swinkels+blog@msc365.eu
 description: > # this means to ignore newlines until "show_excerpts:"
   Remote (hybrid) Cloud Development, App Development, and DevOps Consultancy on Azure Platform, Microsoft 365, and Microsoft Power Platform.
 
