--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ minima:
     # - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
     # - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
     # - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
-    - { platform: linkedin,       user_url: "https://www.linkedin.com/mccmswinkels" }
+    - { platform: linkedin,       user_url: "https://www.linkedin.com/in/mccmswinkels" }
     # - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
     # - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
     # - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
