--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author:
   name: Martin Swinkels - MS Consulting 365
   email: # martin.swinkels+blog@msc365.eu
 description: > # this means to ignore newlines until "show_excerpts:"
-  Remote (hybrid) Cloud Development, App Development, and DevOps Consultancy on Azure Platform, Microsoft 365, and Microsoft Power Platform.
+  Remote (hybrid) Cloud Development, App Development, and DevOps Consulting on Microsoft Azure, Microsoft 365, and Microsoft Power Platform.
 
 url: https://msc365.eu/
 
