Reorganized categories like tags

--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,7 @@ social_links:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 header_pages:
-- tags/portfolio.md
-- archive.md
+- categories/portfolio.md
 - policy.md
 - about.md
 
