--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ paginate_path: "/:num/"
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
   date_format: "%b %-d, %Y"
-  skin: dark
+  skin: auto
   # generate social links in footer
   social_links:
     # - { platform: devto,          user_url: "https://dev.to/jekyll" }
