Update email scraper function

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: MSCollab365
 author:
   name: Martin Swinkels
-  email: martin.swinkels+blog@msc365@@eu
+  email: martin.swinkels+blog@msc365.eu
 description: > # this means to ignore newlines until "show_excerpts:"
   Connecting the dots on Azure, Microsoft 365, Power Platform, and Azure DevOps.
 
