Update business name MSCloud365

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: MSCollab365
+title: MSCloud365
 author:
   name: Martin Swinkels
   email: #martin.swinkels+blog@msc365@@eu
@@ -8,8 +8,8 @@ description: > # this means to ignore newlines until "show_excerpts:"
 
 url: https://msc365.eu/
 
-name: MSCollab365
-subtitle: Cloud, collab and automate with Martin Swinkels
+name: MSCloud365
+subtitle: Martin Swinkels, Cloud DevOps Services
 logo: https://msc365.eu/assets/img/msc365-256.png
 
 show_excerpts: true # set to false to hide excerpts on the homepage
