Renamed back to MSCollab365

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: MSCloud365
+title: MSCollab365
 author:
   name: Martin Swinkels
   email: #martin.swinkels+blog@msc365@@eu
@@ -8,7 +8,7 @@ description: > # this means to ignore newlines until "show_excerpts:"
 
 url: https://msc365.eu/
 
-name: MSCloud365
+name: MSCollab365
 subtitle: Martin Swinkels, Cloud DevOps Services
 logo: https://msc365.eu/assets/img/msc365-256.png
 
