--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@ author:
   email: #martin.swinkels+blog@msc365@@eu
   address: Lagos, Algarve Portugal
 description: > # this means to ignore newlines until "show_excerpts:"
-  Connecting the dots on Azure with DevOps, PowerShell, Bicep IaC and Low-code Power Apps
+  Connecting the dots on Azure with DevOps, PowerShell, Bicep IaC and Low-code
 
 url: https://msc365.eu/
 
 name: Martin Swinkels
-subtitle: Azure DevOps Engineer and Developer
+subtitle: DevOps Engineer / Developer
 logo: https://msc365.eu/assets/img/msc365-profile-128.png
 
 show_excerpts: true # set to false to hide excerpts on the homepage
