--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author:
   email: #martin.swinkels+blog@msc365@@eu
   address: Lagos, Algarve Portugal
 description: > # this means to ignore newlines until "show_excerpts:"
-  Connecting the dots on Azure with DevOps, PowerShell, Bicep IaC and Low-code
+  Connecting the dots on Azure with DevOps, PowerShell, CLI, API, .NET Core, Bicep IaC and Low-code
 
 url: https://msc365.eu/
 
