--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ minima:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 header_pages:
-- https://msc365.eu/
+- index.md
 - categories/portfolio.md
 - policy.md
 - about.md
