Add bluesky social link svg

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ minima:
   # generate social links in footer
   social_links:
     # - { platform: devto,          user_url: "https://dev.to/jekyll" }
-    - { platform: bsky,          user_url: "https://bsky.app/profile/msc365.eu"}
+    - { platform: bluesky,          user_url: "https://bsky.app/profile/msc365.eu" }
     # - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
     # - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
     # - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
