--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ minima:
   # generate social links in footer
   social_links:
     # - { platform: devto,          user_url: "https://dev.to/jekyll" }
-    - { platform: bluesky,          user_url: "https://bsky.app/profile/msc365.eu" }
+    - { platform: bsky,          user_url: "https://bsky.app/profile/msc365.eu", title: "Bluesky" }
     # - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
     # - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
     # - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
@@ -34,7 +34,7 @@ minima:
     # - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
     # - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
     # - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
-    - { platform: linkedin,       user_url: "https://www.linkedin.com/in/mccmswinkels" }
+    - { platform: linkedin,       user_url: "https://www.linkedin.com/in/mccmswinkels", title: "LinkedIn" }
     # - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
     # - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
     # - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
