--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ minima:
     # - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
     # - { platform: telegram,       user_url: "https://t.me/jekyll" }
     # - { platform: twitter,        user_url: "https://twitter.com/mccmswinkels" }
+    - { platform: my_twitter,        user_url: "https://twitter.com/mccmswinkels" }
     # - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
 
 # If you want to link only specific pages in your header, uncomment
