--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ minima:
     # - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
     # - { platform: telegram,       user_url: "https://t.me/jekyll" }
     # - { platform: twitter,        user_url: "https://twitter.com/mccmswinkels" }
-    # - { platform: twitter,        user_url: "https://bsky.app/profile/msc365.eu" }
+    - { platform: bluesky,        user_url: "https://bsky.app/profile/msc365.eu", title: "Bluesky" }
     # - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
 
 # If you want to link only specific pages in your header, uncomment
