--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ minima:
   skin: auto
   # generate social links in footer
   social_links:
+    - { platform: bluesky,        user_url: "https://bsky.app/profile/msc365.eu", title: "Bluesky" }
     # - { platform: devto,          user_url: "https://dev.to/jekyll" }
     # - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
     # - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
@@ -39,7 +40,6 @@ minima:
     # - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
     # - { platform: telegram,       user_url: "https://t.me/jekyll" }
     # - { platform: twitter,        user_url: "https://twitter.com/mccmswinkels" }
-    - { platform: twitter,        user_url: "https://bsky.app/profile/msc365.eu", title: "Bluesky" }
     # - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
 
 # If you want to link only specific pages in your header, uncomment
