--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ minima:
   skin: auto
   # generate social links in footer
   social_links:
-    - { platform: bluesky,        user_url: "https://bsky.app/profile/msc365.eu", title: "Bluesky" }
+    # - { platform: bluesky,        user_url: "https://bsky.app/profile/msc365.eu", title: "Bluesky" }
     # - { platform: devto,          user_url: "https://dev.to/jekyll" }
     # - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
     # - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
