--- a/_config.yml
+++ b/_config.yml
@@ -34,12 +34,13 @@ minima:
     # - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
     # - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
     # - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
-    - { platform: linkedin,       user_url: "https://www.linkedin.com/in/mccmswinkels", title: "LinkedIn" }
+    - { platform: linkedin, user_url: "https://www.linkedin.com/in/mccmswinkels", title: "LinkedIn" }
     # - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
     # - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
     # - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
     # - { platform: telegram,       user_url: "https://t.me/jekyll" }
     # - { platform: twitter,        user_url: "https://twitter.com/mccmswinkels" }
+    - { platform: x, user_url: "https://x.com/mccmswinkels" }
     # - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
 
 # If you want to link only specific pages in your header, uncomment
